--- a/api/exa_ava/exa_ava/pom.xml
+++ b/api/exa_ava/exa_ava/pom.xml
@@ -47,6 +47,11 @@
                     <artifactId>mysql-connector-java</artifactId>
                     <version>8.0.21</version>
                 </dependency>
+                <dependency>
+                    <groupId>org.modelmapper</groupId>
+                    <artifactId>modelmapper</artifactId>
+                    <version>2.3.5</version>
+                </dependency>
 	</dependencies>
 
 	<build>
